# osso-systemui

./: AUTHORS  Makefile  Makefile.am  configure.ac  osso-systemui.pc  systemui.h
debian/: changelog  control  copyright  osso-systemui-dev.install  rules
etc/X11/Xsession.actdead/: 14osso-systemui
etc/X11/Xsession.d/: 40osso-systemui  51osso-systemui
etc/dbus-1/system.d/: system_ui.conf
src/: Makefile.am  dbus.c  dbus.h  ipm.c  plugin.c  plugin.h  systemui.c  systemui.h
