SUBDIRS = src

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = osso-systemui.pc

systemuiconfxsessiondir=$(sysconfdir)/X11/Xsession.d
systemuiconfxsession_DATA = \
		etc/X11/Xsession.d/03osso-systemui \
		etc/X11/Xsession.d/40osso-systemui \
		etc/X11/Xsession.d/51osso-systemui

systemuiconfxsessionaddir=$(sysconfdir)/X11/Xsession.actdead
systemuiconfxsessionad_DATA = \
		etc/X11/Xsession.actdead/14osso-systemui

systemuiconfdbusdir=$(sysconfdir)/dbus-1/system.d
systemuiconfdbus_DATA = etc/dbus-1/system.d/system_ui.conf

